--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,7 +3,8 @@
       <div class="card card-body">
         <h1 class="text-center mb-3">
           <i class="fas fa-user-plus"></i> Register
-        </h1>
+        </h1> 
+        <%- include('./partials/messages.ejs') %>
         <form action="/users/register" method="POST">
           <div class="form-group">
             <label for="name">Name</label>
@@ -49,7 +50,7 @@
               value="<%= typeof password2 != 'undefined' ? password2 : '' %>"
             />
           </div>
-          <button type="submit" class="btn btn-primary btn-block">
+          <button type="submit" class="btn btn-primary btn-block mt-2">
             Register
           </button>
         </form>
